final draft for now

--- a/public/css/texthelp.css
+++ b/public/css/texthelp.css
@@ -38,7 +38,9 @@ hr {
 
 }
 
-
+.whitetext{
+	color:white;
+}
 img {
     width: 100%;
     border-radius: 5px;
@@ -47,11 +49,6 @@ img {
 .background{
 
 	background-color: #262626;
-}
-
-body {
-
-	background-image: url("funscape.jpg");
 }
 
 .title{
@@ -81,6 +78,11 @@ body {
 	border: 1px solid white;
 	border-radius: 5px;
 }
+.wavy {
+  background-color: #222222;
+  background: repeating-linear-gradient(45deg, #2b2b2b 0%, #2b2b2b 10%, #222222 0%, #222222 50%) 0 / 15px 15px;
+}
+
 
 .spacepls{
 
