--- a/public/css/texthelp.css
+++ b/public/css/texthelp.css
@@ -10,6 +10,12 @@ a:hover {
 	border-color: #ffff;
  }
 
+.twitter{
+	color:#0ecfed;
+	font-family: monoton;
+	word-wrap: break-word;
+}
+
  a{
     text-decoration:none;
 }
