map changed for mobile

--- a/public/css/texthelp.css
+++ b/public/css/texthelp.css
@@ -39,6 +39,12 @@ a h1 {
 
 }
 
+.mapsize{
+
+	width:auto;
+	height:400px;
+}
+
 hr {
 	color: white;
 
@@ -63,6 +69,10 @@ img {
 	visibility: hidden;
 }
 
+#map {
+	width: 600px;
+	height: 900px;
+}
 
 #content-mobile {
 	visibility: show;
