--- a/public/css/texthelp.css
+++ b/public/css/texthelp.css
@@ -62,7 +62,7 @@ img {
 }
 
 
-@media screen and (max-width: 990px){
+@media screen and (max-width: 990px) and (min-width:300px){
 
 
 #content-desktop {
@@ -70,8 +70,8 @@ img {
 }
 
 #map {
-	width: 600px;
-	height: 900px;
+	width: 300px;
+	height: 600px;
 }
 
 #content-mobile {
