--- a/public/css/texthelp.css
+++ b/public/css/texthelp.css
@@ -62,24 +62,26 @@ img {
 }
 
 
-@media screen and (max-width: 990px) and (min-width:300px){
-
+@media screen and (max-width: 990px) and (min-width:300px)
+{
 
 #content-desktop {
 	visibility: hidden;
 }
 
 #map {
-	width: 300px;
-	height: 600px;
+	width: 100%;
+	height: 500px;
 }
 
 #content-mobile {
 	visibility: show;
 }
 
-
 }
+
+
+
 
 .background{
 
