--- a/public/css/texthelp.css
+++ b/public/css/texthelp.css
@@ -74,27 +74,33 @@ img {
 	visibility: show;
 }
 
+#map {
+
+	width:300px;
+	height:400px;
 }
 
-.background{
+}
+
+.background {
 
 	background-color: #262626;
 }
 
-.title{
+.title {
 	color:blue;
 	font-family: monoton;
 	word-wrap: break-word;
 }
 
-.pad_side{
+.pad_side {
 
 	padding-left: 10px;
 	padding-right: 10px;
 
 }
 
-.staythere{
+.staythere {
 	width:100%;
 }
 
