--- a/public/css/texthelp.css
+++ b/public/css/texthelp.css
@@ -102,6 +102,21 @@ img {
 	width:300px;
 	height:400px;
 }
+#name {
+	font-size:40px;
+}
+
+#address {
+
+font-size: 20px;
+
+}
+
+#rating {
+	font-size: 20px;
+	
+}
+	
 
 }
 
