--- a/public/css/texthelp.css
+++ b/public/css/texthelp.css
@@ -6,6 +6,12 @@
 
 }
 
+.buttons {
+	width:100%;
+	height:100px;
+} 
+
+
 a:hover { 
 	border-color: #ffff;
  }
@@ -68,6 +74,18 @@ img {
 @media screen and (max-width: 990px) and (min-width:300px)
 {
 
+#address {
+
+font-size: 40px;
+
+}
+
+#rating {
+
+font-size: 40px;
+
+}
+
 #content-desktop {
 	visibility: hide;
 }
@@ -79,11 +97,13 @@ img {
 
 #map {
 
-	width:300px;
-	height:400px;
+	width:100%;
+	height:700px;
 }
 
 }
+
+
 
 @media screen and (max-width: 9000px) and (min-width:991px)
 {
@@ -99,9 +119,10 @@ img {
 
 #map {
 
-	width:300px;
+	width:100%;
 	height:400px;
 }
+
 #name {
 	font-size:40px;
 }
@@ -112,11 +133,15 @@ font-size: 20px;
 
 }
 
+#descript {
+	font:15px;
+}
+
+
 #rating {
 	font-size: 20px;
 	
 }
-	
 
 }
 
