--- a/public/css/texthelp.css
+++ b/public/css/texthelp.css
@@ -6,12 +6,6 @@
 
 }
 
-.buttons {
-	width:100%;
-	height:100px;
-} 
-
-
 a:hover { 
 	border-color: #ffff;
  }
@@ -74,18 +68,6 @@ img {
 @media screen and (max-width: 990px) and (min-width:300px)
 {
 
-#address {
-
-font-size: 40px;
-
-}
-
-#rating {
-
-font-size: 40px;
-
-}
-
 #content-desktop {
 	visibility: hide;
 }
@@ -97,13 +79,11 @@ font-size: 40px;
 
 #map {
 
-	width:100%;
-	height:700px;
+	width:300px;
+	height:400px;
 }
 
 }
-
-
 
 @media screen and (max-width: 9000px) and (min-width:991px)
 {
@@ -119,10 +99,9 @@ font-size: 40px;
 
 #map {
 
-	width:100%;
+	width:300px;
 	height:400px;
 }
-
 #name {
 	font-size:40px;
 }
@@ -133,15 +112,11 @@ font-size: 20px;
 
 }
 
-#descript {
-	font:15px;
-}
-
-
 #rating {
 	font-size: 20px;
 	
 }
+	
 
 }
 
